# artificial_intelligence_in_medicine

./: .gitignore  Makefile  pyproject.toml
artificial_intelligence_in_medicine/: __init__.py  average_jaccard_distance.py  check-unincluded-pmids.py  cluster-barchart.py  create-institution-location-data.py  dataset.py  distribution-heatmap-geo.py  flatten-data-to-parquet.py  get-citation-data.py  get-institution-coordinates.py  plot-funding-agency.py  plots.py
artificial_intelligence_in_medicine/modeling/: community-detection.py  find-central-nodes.py  identify-jumped-articles.py  initialize_graph.py
docs/: mkdocs.yml
notebooks/: 02-ayn-check-data.ipynb  03-ayn-build-scale-free-plot.ipynb  04-ayn-build-scale-free-plots.py
reports/: 2025-11-22-report.html  artificial_intelligence_in_medicine_report.typ
